# NeuroLab

./: CMakeCache.txt  CMakeLists.txt  DisplayImageSequence.cpp  DisplayImageSequence.exe.stackdump  Makefile  cmake_install.cmake
LOGS/: timerec.csv
makePics/: .makepics.cu.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  makecircles.cpp  makelines.cpp  makepics  makepics.cpp  makepics.cu  makeradii.cpp  makesquares.cpp  shuffle.py
makePics/UNCOMPRESSED/: circle0001.ppm  lines0001.ppm  test0001.ppm
